chore(release): 1.2.1
