# backend/controllers/CUDHandler.php
@@ -1,7 +1,6 @@
 <?php
-defined('ABSPATH') OR exit('No direct script access allowed');
+defined('ABSPATH') or exit('No direct script access allowed');
 use \Lpt\DevHelp;
-
 
 /**
  *   This class will handle the Create, Update, Delete Functionality
@@ -24,7 +23,7 @@ class CUDHandler extends AbstractController
  *     description="Create New Entry",
  *     path="/api/posts/{id}",
  *     @OA\Response(
- *       response="200", 
+ *       response="200",
  *       description="Success",
 *         @OA\MediaType(
 *           mediaType="application/json",
@@ -59,45 +58,33 @@ class CUDHandler extends AbstractController
             $this->resource->echoOut(json_encode($smsEntry));
         };
     }
-        /**
- * @OA\Put(
- *     description="Update Entry",
- *     path="/api/posts/{id}",
- *     @OA\Parameter(
- *          in="query",
- *          name="passengers", 
- *          required=true, 
- *          description="passenger information", in="query",
- *          @OA\Schema(
- *              type="array",
- *              @OA\Items(
- *                  type="object",
- *                  @OA\Property(
- *                      property="firstName",
- *                      description="The product name",
- *                      @OA\Schema(type="string")
- *                  ),
- *                  @OA\Property(
- *                      property="lastName",
- *                      @OA\Schema(type="string")
- *                  ),
- *                  @OA\Property(
- *                      property="middleName",
- *                      @OA\Schema(type="string")
- *                  )
- *              )
- *          )
- *     ),
- * 
- *     @OA\Response(
- *       response="200", 
- *       description="Success",
-*         @OA\MediaType(
-*           mediaType="application/json",
-*           @OA\Schema(ref="#/components/schemas/SearchResults"),
-*         )
- *     )
- * )
+    /**
+  @OA\Put(
+      description="Update Entry",
+      path="/api/posts/{id}",
+      @OA\Parameter(
+       in="path",
+       name="id",
+       required=true,
+       description="Entry Id",
+      ),
+      @OA\RequestBody(
+          description="Entry content",
+          required=true,
+          @OA\MediaType(
+        mediaType="application/json",
+        @OA\Schema(ref="#/components/schemas/SmsEntrie")
+        )
+      ),
+      @OA\Response(
+    response="200",
+    description="Success",
+    @OA\MediaType(
+      mediaType="application/json",
+       @OA\Schema(ref="#/components/schemas/SearchResults"),
+     )
+      )
+  )
  */
     public function updateEntry()
     {
@@ -122,20 +109,20 @@ class CUDHandler extends AbstractController
             $this->resource->echoOut(json_encode($smsEntry));
         };
     }
-/**
- * @OA\Delete(
- *     description="Remove Entry",
- *     path="/api/posts/{id}",
- *     @OA\Response(
- *       response="200", 
- *       description="Success",
-*         @OA\MediaType(
-*           mediaType="application/json",
-*           @OA\Schema(ref="#/components/schemas/SearchResults"),
-*         )
- *     )
- * )
- */
+    /**
+     * @OA\Delete(
+     *     description="Remove Entry",
+     *     path="/api/posts/{id}",
+     *     @OA\Response(
+     *       response="200",
+     *       description="Success",
+    *         @OA\MediaType(
+    *           mediaType="application/json",
+    *           @OA\Schema(ref="#/components/schemas/SearchResults"),
+    *         )
+     *     )
+     * )
+     */
     public function deleteEntry()
     {
         return function ($id) {
@@ -149,5 +136,4 @@ class CUDHandler extends AbstractController
             $this->resource->echoOut('{"rows_affected": ' . $rows_affected . '}');
         };
     }
-
 }
